<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoardFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/listProfileimage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/profile"
             />

        <TextView
            android:id="@+id/usernameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/statusTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="TextView" />

        <Button
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/registerButton"
            android:text="@string/profile" />
        <Button
            android:id="@+id/editSataus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/registerButton"
            android:text="@string/statusBtn" />


        <Button
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/registerButton"
            android:text="@string/logOut" />
    </LinearLayout>



</FrameLayout>