<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="177dp"
        android:layout_marginBottom="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/text"
            android:ems="10"
            android:hint="@string/emailAddressTxt"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/text"
            android:ems="10"
            android:hint="@string/passwordTxt"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/registerButton"
            android:hapticFeedbackEnabled="false"
            android:text="@string/loginTxt" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>